--- a/translations/kangyur/translations/062-006_toh206_pure_sustenance_of_food.xml
+++ b/translations/kangyur/translations/062-006_toh206_pure_sustenance_of_food.xml
@@ -7,8 +7,7 @@
                 <title type="mainTitle" xml:lang="en">Pure Sustenance of Food</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">zas kyi ’tsho ba rnam par dag pa</title>
                 <title type="mainTitle" xml:lang="bo">ཟས་ཀྱི་འཚོ་བ་རྣམ་པར་དག་པ།</title>
-                <title type="longTitle" xml:lang="en">The Mahāyāna Sūtra: Pure Sustenance of
-                    Food</title>
+                <title type="longTitle" xml:lang="en">The Mahāyāna Sūtra “Pure Sustenance of Food”</title>
                 <title type="longTitle" xml:lang="bo">ཟས་ཀྱི་འཚོ་བ་རྣམ་པར་དག་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">zas kyi ’tsho ba rnam par dag pa zhes bya
                     ba theg pa chen po’i mdo</title>
@@ -25,10 +24,10 @@
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.18 <date>2022</date>
+                <edition>v 1.0.0 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2">
+            <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -46,7 +45,7 @@
                 <idno xml:id="UT22084-062-006"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2022-03-31</date>
+                <date>2022-09-01</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh206" type="text">
@@ -60,7 +59,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-26T08:10:59.222Z" user="admin">26/08/2022 08:10:59</note>
+                <note type="lastUpdated" date-time="2022-09-01T19:00:23.72Z" user="admin">01/09/2022 19:00:23</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:44:44.856Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:44:44.856Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:06:51.159Z" user="line-tofte">3</note>
@@ -103,6 +102,8 @@
                 <note type="updated" update="translation-status" value="2" date-time="2022-04-12T06:46:27.084Z" user="line-tofte">2</note>
                 <note type="updated" update="text-version" value="0.0.17" date-time="2022-04-12T06:46:27.084Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.18" date-time="2022-08-26T08:10:50.947Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2022-09-01T19:00:15.697Z" user="martina-cotter">1.a</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-01T19:00:15.697Z" user="martina-cotter">First published version</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -137,7 +138,7 @@
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-062-006-2"/>
                 <p tid="4">Translated, edited, and finalized by the Subhashita Translation Group.
-                    The translation was produced by Lowell Cook who also wrote the introduction.
+                    The translation was produced by Lowell Cook, who also wrote the introduction.
                     Benjamin Ewing edited the translation against the Tibetan and revised the
                     introduction.</p>
                 <milestone unit="chunk" xml:id="UT22084-062-006-3"/>
@@ -158,7 +159,7 @@
                         their example as an opportunity to describe the misdeeds and meritorious
                         actions related to food, along with their results. The first half of the
                         discourse concerns the saṅgha and monastic rules surrounding food—eating
-                        only a single meal a day, participating in meals, how to treat leftovers,
+                        only a single meal a day, how to participate in meals, how to treat leftovers,
                         and the way to receive offerings—that are fundamental to the Vinaya, the
                         Buddhist monastic code. The second half of the discourse concerns food
                         hygiene and is specifically directed to the laypeople who handle the
@@ -173,18 +174,17 @@
                             Food</title> is far from certain. While the notions of purity and
                         pollution presented in the sūtra would appear to be rooted in an Indic
                         worldview, and the narrative connection between Maudgalyāyana and starving
-                        spirits is common in Indic Buddhist literature,<note place="end" xml:id="UT22084-062-006-8"> See for example, Tibetan Classics
-                            Translators Guild of New York, trans., <title xml:lang="en">
+                        spirits is common in Indic Buddhist literature,<note place="end" xml:id="UT22084-062-006-8"> See, for example, 
+                            Lozang Jamspal and Kaia Tara Fischer, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/UT22084-073-001.html#UT22084-073-001-1739">The Hundred Deeds</ref>
-                            </title>, Toh. 340 (84000: Translating
+                            </title>, Toh 340 (84000: Translating
                             the Words of the Buddha, 2020), 3.215–240.</note> the sūtra is bereft of
                         the expected Sanskrit title and lacks the traditional colophon naming its
                         Indian and Tibetan translators. Thus, there is the possibility that this
                         sūtra is a “gray text,” one that is neither purely Indic in origin nor fully
-                        Tibetan apocrypha. It may have been derived from Indic material in a Tibetan
-                        setting rather than be a translation in the strict sense of the term. The
+                        Tibetan apocrypha.<note place="end" xml:id="UT22084-062-006-55">On the notion of “gray texts,” see Davidson 2000.</note> Rather than a translation in the strict sense of the term, it may have been derived from Indic material in a Tibetan setting. The
                         sūtra is not listed in the Denkarma (Tib. <title xml:lang="Bo-Ltn">ldan/lhan
-                            dkar ma</title>) or the Phangtangma (Tib. <title xml:lang="Bo-Ltn">’phang thang ma</title>) catalogs, the two surviving indexes from the
+                            dkar ma</title>) or the Phangthangma (Tib. <title xml:lang="Bo-Ltn">’phang thang ma</title>) catalogs, the two surviving indexes from the
                         Imperial Period (629–841 <hi rend="small-caps">ce</hi>). This dearth of
                         information makes it impossible to date the translation of <title xml:lang="en">Pure Sustenance of Food</title> or otherwise determine its
                         status in the Tibetan canon. There is no known Sanskrit witness of the
@@ -210,7 +210,7 @@
                         to all buddhas and bodhisattvas.</p>
                     <lb/>
                     <p tid="21">Thus did I hear at one time. The Blessed One was staying in the
-                        Bamboo Grove, accompanied by sixty-three monastic assemblies, as well as
+                        Bamboo Grove, accompanied by a great saṅgha of twelve hundred fifty monks, as well as
                         other monks and nuns, laymen and laywomen, the eight classes of beings, and
                         many bodhisattvas. </p>
                     <milestone unit="chunk" xml:id="UT22084-062-006-15"/>
@@ -239,10 +239,10 @@
                     <!--                    <milestone unit="chunk" xml:id="UT22084-062-006-19"/>-->
                     <p tid="25"> “The Blessed One is correct,” Maudgalyāyana remarked.<note place="end" xml:id="UT22084-062-006-20"> This rendering of the
                             transition between Maudgalyāyana’s remark and the Buddha’s speech is
-                            based on the Phukdrak version of the translation. This version alone
+                            based on the Phukdrak version of the text. This version alone
                             makes it clear that the Buddha resumes his discourse after
                             Maudgalyāyana’ confirmation. Degé and the other versions of the
-                            translation do not explicitly mark the transition, making it appear that
+                            text do not explicitly mark the transition, making it appear that
                             Maudgalyāyana keeps speaking.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-062-006-21"/>
@@ -291,7 +291,7 @@
                         they handled the saṅgha’s clean food with unclean hands, dug their unclean
                         hands into the saṅgha’s clean food, or mixed unclean food into clean food
                         and offered it to the saṅgha. Later, they fell to the state of a starving
-                        spirit for five hundred lifetimes, and constantly consume filth and eat
+                        spirit for five hundred lifetimes, and they constantly consume filth and eat
                         toilet waste. When they consume toilet waste, the toilet protectors run them
                         off with iron clubs and disparage the starving spirits as receptacles of
                         filth. They consume filth such as people’s pus, blood, mucus, snot, and
@@ -351,6 +351,7 @@
                     <bibl xml:id="UT22084-062-006-36">Phangthangma (<title xml:lang="Bo-Ltn">dkar
                             chag ’phang thang ma</title>). Beijing: mi rigs dpe skrun khang,
                         2003.</bibl>
+                    <bibl xml:id="UT22084-062-006-56">Davidson, Ronald. “Gsar ma Apocrypha: The Creation of Orthodoxy, Gray Texts, and the New Revelation.” In <title xml:lang="">The Many Canons of Tibetan Buddhism</title>, edited by Helmut Eimer and David Germano, 202-224. Leiden: Brill, 2000.</bibl>
                     <bibl xml:id="UT22084-062-006-37">Herrmann-Pfandt, Adelheid. <title xml:lang="de">Die lHan kar ma: ein früher Katalog der ins Tibetische
                             übersetzten buddhistischen Texte</title>. Vienna: Verlag der
                         Österreichischen Akademie der Wissenschaften, 2008.</bibl>
@@ -402,8 +403,9 @@
                             <term xml:lang="Bo-Ltn" status="verified">’od ma’i tshal</term>
                             <term xml:lang="bo">འོད་མའི་ཚལ།</term>
                             <term xml:lang="Sa-Ltn" status="verified">Veṇuvana</term>
-                            <term type="definition">A grove north of Rājagṛha where the Buddha
-                                delivered many Great Vehicle teachings.</term>
+                            <term type="definition">The famous bamboo grove near Rājagṛha where the Buddha regularly stayed and gave teachings. 
+                                It was situated on land donated by King Bimbisāra of Magadha and was the first of several landholdings donated 
+                                to the Buddhist community during the time of the Buddha.</term>
                         </gloss>
                     </item>
                     <item>
