--- a/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -16,9 +16,10 @@
                 <author role="translatorEng" ref="eft:person-185">Shenghai Li</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <consultant role="projectManager" ref="eft:person-186">Zhuo Siyu</consultant>
+                <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2019</date>
+                <edition>v 0.1.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -38,9 +39,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-02T08:31:01.943Z" user="admin">02/09/2022 08:31:01</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v 0.1.0</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.1.2" date-time="2022-03-14T11:18:41.349Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-05-03T10:58:17.409Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.1.3" date-time="2022-05-03T10:58:17.409Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.1.4" date-time="2022-05-03T10:58:37.088Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-31T07:46:19.955Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.1.5" date-time="2022-05-31T07:46:19.955Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-09-02T08:30:53.786Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.1.6" date-time="2022-09-02T08:30:53.786Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-09-02T08:32:04.677Z" user="admin">02/09/2022 08:32:04</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2022-03-14T11:18:41.349Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-05-03T10:58:17.409Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2022-05-03T10:58:17.409Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2022-05-03T10:58:37.088Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-05-31T07:46:19.955Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2022-05-31T07:46:19.955Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-09-02T08:30:53.786Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2022-09-02T08:30:53.786Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2022-09-02T08:31:56.566Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
