--- a/translations/kangyur/placeholders/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/placeholders/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
@@ -10,9 +10,10 @@
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
                 <editor role="projectEditor" ref="eft:person-274">Adam Krug</editor>
+                <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2022</date>
+                <edition>v 0.0.8 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -31,8 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-02T08:34:34.643Z" user="admin">02/09/2022 08:34:34</note>
-                <note type="title" date-time="2022-04-10T08:20:16.785Z" user="john">Apart from the title, this text, written by Vararuci, is the same as the Mahākāladevīstotra aṣṭa in the Tengyur (Toh 1777).</note>
+                <note type="lastUpdated" date-time="2022-09-02T08:35:10.427Z" user="admin">02/09/2022 08:35:10</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T08:01:52.252Z" user="line-tofte">Auto (update-contributors)</note>
@@ -43,6 +43,7 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-06-16T10:17:55.018Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-02T08:34:28.484Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-09-02T08:34:28.484Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-02T08:35:08.302Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
