--- a/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
+++ b/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
@@ -22,9 +22,11 @@
                                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                                 <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
                                 <editor role="finalReviewer" ref="eft:person-50">Andreas Doctor</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -66,7 +68,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-08-11T10:27:41.02Z" user="admin">11/08/2022 10:27:41</note>
+                                <note type="lastUpdated" date-time="2022-09-02T13:48:24.918Z" user="admin">02/09/2022 13:48:24</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:25:44.636Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:25:44.636Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:17:40.208Z" user="line-tofte">3</note>
@@ -112,7 +114,8 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="translation-status" value="2" date-time="2022-05-17T06:35:56.431Z" user="line-tofte">2</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-17T06:35:56.431Z" user="line-tofte">Auto (update-publication-status)</note>
-                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-11T10:27:32.421Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-11T10:27:32.421Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-02T13:48:16.667Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
