--- a/translations/kangyur/translations/088-007_toh513,856-the_incantation_that_has_the_attributes_of_all_buddhas.xml
+++ b/translations/kangyur/translations/088-007_toh513,856-the_incantation_that_has_the_attributes_of_all_buddhas.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2021</date>
+                <edition>v 1.0.6 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -69,7 +69,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:29:34.456Z" user="admin">26/07/2022 07:29:34</note>
+                <note type="lastUpdated" date-time="2022-09-06T14:19:35.869Z" user="admin">06/09/2022 14:19:35</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-06-21T07:07:37.133Z" user="john">2.e</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-07-28T02:10:47.602Z" user="dion-blundell">2.c</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T05:59:48.729Z" user="andreas">v 0.1.0</note>
@@ -99,6 +99,7 @@
                 <note type="updated" update="text-version" value="1.0.3" date-time="2021-05-06T10:46:16.807Z" user="mike">Typo fixed</note>
                 <note type="updated" update="text-version" value="1.0.4" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-07-26T07:29:26.805Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.6" date-time="2022-09-06T14:19:31.849Z" user="martina-cotter">Updated typo.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -293,7 +294,7 @@
                                 香。將然香時其如來壇及餘壇香。復應各別誦此神呪而以呪之。若有眾生得聞此香。 非時夭橫靡不除滅。先所呪香並燒盡已。然後收彼四天王食散於淨處</foreign>.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-088-007-35"/>
-                    <p tid="32">When the Blessed One spoken this, the four great kings, the entire retinue, and the world with all its gods, humans, <foreign xml:lang="Sa-Ltn" type="term">asuras</foreign>, and <foreign xml:lang="Sa-Ltn" type="term">gandharvas</foreign> rejoiced and praised
+                    <p tid="32">When the Blessed One had spoken this, the four great kings, the entire retinue, and the world with all its gods, humans, <foreign xml:lang="Sa-Ltn" type="term">asuras</foreign>, and <foreign xml:lang="Sa-Ltn" type="term">gandharvas</foreign> rejoiced and praised
                         the words of the Blessed One.</p>
                     <milestone unit="chunk" xml:id="UT22084-088-007-36"/>
                     <trailer tid="33">This concludes the <title xml:lang="en">Noble Dhāraṇī Endowed with the Attributes of All the Buddhas</title>.</trailer>
