--- a/translations/kangyur/translations/075-003_toh345-the_magnificent_account_about_a_sow.xml
+++ b/translations/kangyur/translations/075-003_toh345-the_magnificent_account_about_a_sow.xml
@@ -72,7 +72,7 @@
       </titleStmt>
 
       <editionStmt>
-                <edition>v 1.0.9 <date>2022</date>
+                <edition>v 1.0.10 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -112,7 +112,7 @@
       <notesStmt>
 
 
-        <note type="lastUpdated" date-time="2022-07-26T07:17:41.987Z" user="admin">26/07/2022 07:17:41</note>
+        <note type="lastUpdated" date-time="2022-09-08T03:59:21.622Z" user="admin">08/09/2022 03:59:21</note>
 
 
         <tei:note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</tei:note>
@@ -218,6 +218,7 @@
 
         <note type="updated" update="text-version" value="1.0.8" date-time="2022-07-04T06:49:21.848Z" user="sameer">Auto (update-publication-status)</note>
           <note type="updated" update="text-version" value="1.0.9" date-time="2022-07-26T07:17:34.336Z" user="cabie-sim">Auto (update-titles)</note>
+          <note type="updated" update="text-version" value="1.0.10" date-time="2022-09-08T03:59:17.566Z" user="john">Typo corrected</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -857,7 +858,7 @@
                     </item>
           <item xml:id="UT22084-075-003-107">
                         <abbr>DN</abbr>
-            <expan>Dīrghanikāya. The Pāli Text Society edition.</expan>
+            <expan>Dīrhanikāya. The Pāli Text Society edition.</expan>
                     </item>
           <item xml:id="UT22084-075-003-108">
                         <abbr>Iti</abbr>
