--- a/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
+++ b/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
@@ -34,16 +34,16 @@
                                         Norbu</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.5 <date>2022</date>
+                <edition>v 1.0.0 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2">
-                                <publisher>
+                        <publicationStmt status="1.a">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability>
+                <availability>
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -55,12 +55,12 @@
                                                   details, see the Creative Commons license.</p>
                                         </licence>
                                 </availability>
-                                <idno xml:id="UT22084-072-033"/>
-                                <note>An early mistake in the assigning of UT numbers within the
+                <idno xml:id="UT22084-072-033"/>
+                <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2022-04-20</date>
-                        </publicationStmt>
+                <date>2022-09-13</date>
+            </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh333" type="text">
                                         <ref>Toh 333</ref>
@@ -76,7 +76,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-09-11T05:15:53.48Z" user="admin">11/09/2022 05:15:53</note>
+                                <note type="lastUpdated" date-time="2022-09-13T13:29:02.771Z" user="admin">13/09/2022 13:29:02</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:25:44.636Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:25:44.636Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:17:40.208Z" user="line-tofte">3</note>
@@ -128,6 +128,8 @@
                                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-02T13:48:16.667Z" user="line-tofte">Auto
                                         (update-contributors)</note>
                             <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-11T05:15:49.423Z" user="john">A few corrections to note 7 and glossary entry for Kapila.</note>
+                            <note type="updated" update="translation-status" value="1.a" date-time="2022-09-13T13:28:54.698Z" user="martina-cotter">1.a</note>
+                            <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-13T13:28:54.698Z" user="martina-cotter">First published version</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -164,8 +166,6 @@
                                 <p tid="66">The translation was completed under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha.</p>
-                                <lb/>
-                                <p tid="68">[Sponsored by XXXXXX]</p>
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="69">Introduction</head>
@@ -737,7 +737,7 @@
                                                   shi la</foreign> (Skt. <foreign xml:lang="Sa-Ltn" type="term">śaṅkhaśilā</foreign>; Pali <foreign xml:lang="Pi-Ltn" type="term">sankhasilā</foreign>). See the entry for <foreign xml:lang="Pi-Ltn" type="term">sankha</foreign>,
                                                   “shell,” in <title xml:lang="en">The Pali Text
                                                   Society’s Pali–English Dictionary</title>, p. 663.
-                                                </note> coral, silver, alluvial gold, emeralds,
+                                                </note> coral, silver, alluvial gold, <term ref="UT22084-072-033-263">aśmagarbha emerald</term>s,
                                                 cat’s eyes,<note place="end" xml:id="UT22084-072-033-223">
                                                   <foreign xml:lang="Bo-Ltn" type="term">spug</foreign>. Understandings of what this term
                                                   refers to vary, but it could be <foreign xml:lang="Sa-Ltn" type="term">musāragalva</foreign> (Pali <foreign xml:lang="Pi-Ltn" type="term">masāragalla</foreign>), i.e., a green precious
@@ -858,6 +858,7 @@
                                                 in mind when I proclaimed, ‘Compared to the
                                                 happiness of the gods, dominion over humans is
                                                 inferior.’</p>
+                                        <milestone unit="chunk" xml:id="UT22084-072-033-307"/>
                                         <p tid="107">“Vasiṣṭha, that which among humans is eight
                                                 hundred years <ref cRef="F.267.b" type="folio" xml:id="UT22084-072-033-247"/> is but one day for
                                                 the gods of the Heaven of Delighting in Emanations.
@@ -940,13 +941,12 @@
                                                 gandharvas, rejoiced and extolled what the Blessed
                                                 One had taught.</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-237"/>
-                                        <trailer tid="112">This concludes the noble sūtra
-                                                “Vasiṣṭha.”</trailer>
+                                        <trailer tid="112">This concludes the Noble Sūtra of Vasiṣṭha.</trailer>
                                 </div>
                                 <div type="colophon" xml:id="UT22084-072-033-colophon">
                                         <head type="colophon" tid="113">Colophon</head>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-238"/>
-                                        <p tid="114">This was translated, corrected, and finalized
+                                        <p tid="114">This was translated, revised, and finalized
                                                 by the Indian preceptor Sarvajñānadeva, the chief
                                                 editor-translator Bandé Paltsek, and others.</p>
                                 </div>
@@ -1219,8 +1219,8 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-072-033-263">
-                                                  <term>emerald</term>
+                        <gloss mode="marked" type="term" xml:id="UT22084-072-033-263">
+                                                <term>aśmagarbha emerald</term>
                                                   <term xml:lang="Bo-Ltn" status="verified">rdo’i snying po </term>
                                                   <term xml:lang="bo">རྡོའི་སྙིང་པོ།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified">aśmagarbha</term>
@@ -1318,8 +1318,6 @@
                                                   <term xml:lang="Bo-Ltn" status="verified">’dzam bu’i gling </term>
                                                   <term xml:lang="bo">འཛམ་བུའི་གླིང་།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified">Jambudvīpa</term>
-                                                  <term type="definition">Use standard
-                                                  definition.</term>
                                                 </gloss>
                     </item>
                                         <item>
@@ -1374,7 +1372,7 @@
                     </item>
                                         <item>
                         <gloss mode="marked" type="place" xml:id="UT22084-072-033-278">
-                                                  <term>Vṛji </term>
+                                                  <term>Vṛji</term>
                                                 <term xml:lang="Bo-Ltn" status="verified">br-i dzi </term>
                             <term xml:lang="bo">བྲྀ་ཛི།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified">Vṛji </term>
