--- a/translations/kangyur/placeholders/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
@@ -14,10 +14,10 @@
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-036-009"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-02T08:33:42.151Z" user="admin">02/09/2022 08:33:42</note>
+                <note type="lastUpdated" date-time="2022-09-14T07:32:30.183Z" user="admin">14/09/2022 07:32:30</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:39.295Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:18:35.836Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-06T13:07:38.914Z" user="line-tofte">Auto (update-contributors)</note>
@@ -44,6 +44,8 @@
                 <note type="updated" update="translation-status" value="2.f" date-time="2022-07-04T13:23:03.026Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-04T13:23:03.026Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-02T08:33:34.069Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-09-14T07:32:22.011Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-14T07:32:22.011Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
