--- a/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -19,11 +19,11 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2019</date>
+                <edition>v 0.1.8 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-065-004"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-02T08:32:04.677Z" user="admin">02/09/2022 08:32:04</note>
+                <note type="lastUpdated" date-time="2022-09-14T07:44:08.638Z" user="admin">14/09/2022 07:44:08</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -52,6 +52,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-02T08:30:53.786Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.1.6" date-time="2022-09-02T08:30:53.786Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.7" date-time="2022-09-02T08:31:56.566Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-09-14T07:44:00.626Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2022-09-14T07:44:00.626Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
