--- a/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
+++ b/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
@@ -12,10 +12,10 @@
                 <author role="translatorEng" ref="contributors.xml#person-76">Wiesiek Mical</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT23703-003-001"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 <link type="isCommentaryOf" target="toh417"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-21T08:03:34.971Z" user="admin">21/03/2022 08:03:34</note>
+                <note type="lastUpdated" date-time="2022-09-14T08:23:15.213Z" user="admin">14/09/2022 08:23:15</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-21T09:54:52.67Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-21T09:54:52.67Z" user="andreas">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-02-17T10:42:02.182Z" user="line-tofte">2.h</note>
@@ -45,6 +45,8 @@
                 <note type="updated" update="attribution" import="tengyur-data-1180-1304_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin">Author attribution taken from Derge Dkar-chag.</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-03-21T08:03:27.85Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-21T08:03:27.85Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-09-14T08:23:07.15Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-14T08:23:07.15Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
