--- a/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
+++ b/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Hevajra Tantra called “The Precious Garland of Yoga”</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Yoga­ratna­mālā­nāma­hevajra­pañjikā</title>
                 <title xml:lang="bo" type="mainTitle">དགྱེས་པ་རྡོ་རྗེའི་དཀའ་འགྲེལ་རྣལ་འབྱོར་རིན་པོ་ཆེའི་ཕྲེང་བ་ཞེས་བྱ་བ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">dgyes pa rdo rje'i dka' 'grel rnal 'byor rin po che'i phreng ba zhes bya ba/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Yoga­ratna­mālā­nāma­hevajra­pañjikā</title>
-                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Hevajra Tantra called “The Precious Garland of Yoga”</title>
-                <author role="translatorMain" ref="contributors.xml#team-55"/>
-                <author role="translatorEng" ref="contributors.xml#person-76">Wiesiek Mical</author>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-76">Wiesiek Mical</author>
+                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -35,7 +37,7 @@
                 <link type="isCommentaryOf" target="toh417"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-14T08:23:15.213Z" user="admin">14/09/2022 08:23:15</note>
+                <note type="lastUpdated" date-time="2022-09-14T08:24:02.772Z" user="admin">14/09/2022 08:24:02</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-21T09:54:52.67Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-21T09:54:52.67Z" user="andreas">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-02-17T10:42:02.182Z" user="line-tofte">2.h</note>
@@ -47,6 +49,7 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-21T08:03:27.85Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-14T08:23:07.15Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-14T08:23:07.15Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T08:23:54.742Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
