--- a/translations/kangyur/placeholders/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/placeholders/072-010_toh310-the_sutra_on_impermanence.xml
@@ -12,10 +12,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.15 <date>2021</date>
+                <edition>v 0.0.16 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-072-010"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-11T09:07:42.154Z" user="admin">11/04/2022 09:07:42</note>
+                <note type="lastUpdated" date-time="2022-09-14T08:40:37.112Z" user="admin">14/09/2022 08:40:37</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -56,6 +56,8 @@
     <note type="updated" update="translation-status" value="2.f" date-time="2022-04-11T09:07:09.981Z" user="line-tofte">2.f</note>
     <note type="updated" update="text-version" value="0.0.14" date-time="2022-04-11T09:07:09.981Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="text-version" value="0.0.15" date-time="2022-04-11T09:07:36.482Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="translation-status" value="2.d" date-time="2022-09-14T08:40:29.143Z" user="line-tofte">2.d</note>
+    <note type="updated" update="text-version" value="0.0.16" date-time="2022-09-14T08:40:29.143Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
