--- a/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
+++ b/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
@@ -15,10 +15,10 @@
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-091-039"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-19T12:33:36.017Z" user="admin">19/05/2022 12:33:36</note>    <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:38:29.103Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:38:29.103Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:32:27.137Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-19T12:32:27.137Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T12:32:57.789Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-19T12:33:32.316Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-09-14T09:31:38.148Z" user="admin">14/09/2022 09:31:38</note>    <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:38:29.103Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:38:29.103Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:32:27.137Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-19T12:32:27.137Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T12:32:57.789Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-19T12:33:32.316Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-09-14T09:31:30.102Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-14T09:31:30.102Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
