--- a/translations/kangyur/placeholders/090-006_toh562-the_sutra_of_great_cool_grove.xml
+++ b/translations/kangyur/placeholders/090-006_toh562-the_sutra_of_great_cool_grove.xml
@@ -19,9 +19,10 @@
                 <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                 <author role="translatorEng" ref="eft:person-51">James Gentry</author>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.d">
@@ -40,13 +41,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-25T12:32:23.783Z" user="admin">25/05/2022 12:32:23</note>
+                <note type="lastUpdated" date-time="2022-09-14T12:26:09.148Z" user="admin">14/09/2022 12:26:09</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:23:55.171Z" user="mike">2.d</note>
-            
-    <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-04-14T12:46:46.515Z" user="line-tofte">v 0.0.2</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-08T10:36:12.737Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-07-08T10:36:45.436Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-25T12:32:19.92Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-04-14T12:46:46.515Z" user="line-tofte">v 0.0.2</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-08T10:36:12.737Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-07-08T10:36:45.436Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-25T12:32:19.92Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T12:26:07.064Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
