--- a/translations/kangyur/placeholders/079-043_toh416-the_tantra_of_the_protector_the_arising_of_secret_accomplishments.xml
+++ b/translations/kangyur/placeholders/079-043_toh416-the_tantra_of_the_protector_the_arising_of_secret_accomplishments.xml
@@ -13,13 +13,14 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje nag po chen po khros pa'i mgon po gsang ba dngos grub byung ba zhes bya ba'i rgyud/</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <sponsor ref="eft:sponsor-206">Lee Boon Hwa Kelvin, Doris Lim, Chang Chen Hsien, Lim Cheng Cheng, all sentient beings</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-079-043"/>
                 <date/>
             </publicationStmt>
@@ -35,10 +36,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T15:00:52.759Z" user="admin">09/06/2022 15:00:52</note>
+                <note type="lastUpdated" date-time="2022-09-14T13:25:40.501Z" user="admin">14/09/2022 13:25:40</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-01-11T13:19:35.265Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-11T13:19:35.265Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-11T13:19:55.33Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-01T04:24:43.343Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-03T13:33:54.361Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-03T13:34:23.99Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-09-14T13:25:32.491Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-09-14T13:25:32.491Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
