--- a/translations/kangyur/placeholders/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
@@ -18,10 +18,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-089-003"/>
                 <date/>
             </publicationStmt>
@@ -46,11 +46,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-11T08:26:55.234Z" user="admin">11/05/2022 08:26:55</note>
+                <note type="lastUpdated" date-time="2022-09-15T08:46:27.814Z" user="admin">15/09/2022 08:46:27</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:28:05.921Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:28:50.545Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:39:13.017Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:39:13.017Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-04T11:31:28.043Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-04T11:31:28.043Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-04T11:32:08.387Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:26:47.716Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:26:47.716Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-29T15:28:50.545Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-02-09T15:39:13.017Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-02-09T15:39:13.017Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-04T11:31:28.043Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-04T11:31:28.043Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-04-04T11:32:08.387Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-11T08:26:47.716Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-11T08:26:47.716Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:46:19.802Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:46:19.802Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
